feat: update language configuration

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "displayName": "Nix IDE",
   "description": "Nix language support with formatting and error report.",
   "version": "0.0.1",
+  "publisher": "jnoortheen",
+  "icon": "images/icon.png",
   "license": "MIT",
   "engines": {
     "vscode": "^1.47.0"
@@ -10,6 +12,14 @@
   "categories": [
     "Programming Languages"
   ],
+  "bugs": {
+    "url": "https://github.com/jnoortheen/vscode-nix-ide/issues"
+  },
+  "homepage": "https://github.com/jnoortheen/vscode-nix-ide",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jnoortheen/vscode-nix-ide"
+  },
   "contributes": {
     "languages": [
       {
