refactor: update fold region settings

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -25,27 +25,51 @@
     ],
     // symbols that are auto closed when typing
     "autoClosingPairs": [
-        [
-            "{",
-            "}"
-        ],
-        [
-            "[",
-            "]"
-        ],
-        [
-            "(",
-            ")"
-        ],
-        [
-            "\"",
-            "\""
-        ],
-        [
-            "'",
-            "'"
-        ]
+        {
+            "open": "{",
+            "close": "}"
+        },
+        {
+            "open": "[",
+            "close": "]"
+        },
+        {
+            "open": "(",
+            "close": ")"
+        },
+        {
+            "open": "'",
+            "close": "'",
+            "notIn": [
+                "string",
+                "comment"
+            ]
+        },
+        {
+            "open": "\"",
+            "close": "\"",
+            "notIn": [
+                "string",
+                "comment"
+            ]
+        },
+        {
+            "open": "''",
+            "close": "''",
+            "notIn": [
+                "string",
+                "comment"
+            ]
+        },
+        {
+            "open": "/**",
+            "close": " */",
+            "notIn": [
+                "string"
+            ]
+        }
     ],
+    "autoCloseBefore": ";:.,=}])>` \n\t",
     // symbols that can be used to surround a selection
     "surroundingPairs": [
         [
@@ -72,5 +96,11 @@
             "''",
             "''"
         ],
-    ]
+    ],
+    "folding": {
+        "markers": {
+            "start": "^\\s*//\\s*#?region\\b",
+            "end": "^\\s*//\\s*#?endregion\\b"
+        }
+    }
 }
