--- a/package.json
+++ b/package.json
@@ -54,17 +54,20 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.10.4",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "fable-compiler": "^2.10.1",
-    "fable-splitter": "^2.2.1",
+    "@types/node": "^14.0.27",
     "js-yaml": "^3.14.0",
-    "standard-version": "^8.0.1"
+    "prettier": "^2.0.0",
+    "standard-version": "^9.0",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.9.7",
+    "vscode": "^1.1.25"
   },
   "scripts": {
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json",
-    "build": "fable-splitter --config splitter.config.js",
+    "build": "tsc -p ./",
     "watch": "yarn build --watch",
+    "postinstall": "node ./node_modules/vscode/bin/install",
     "release": "yarn build && standard-version"
   }
 }
