--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nix-ide",
   "displayName": "Nix IDE",
   "description": "Nix language support with formatting and error report.",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "publisher": "jnoortheen",
   "icon": "images/icon.png",
   "license": "MIT",
@@ -76,6 +76,7 @@
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.9.7",
+    "vsce": "^1.78.0",
     "vscode": "^1.1.25"
   },
   "scripts": {
@@ -83,6 +84,6 @@
     "build": "tsc -p ./",
     "watch": "yarn build --watch",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "release": "yarn build && standard-version"
+    "release": "yarn build && standard-version && vsce publish"
   }
 }
