--- a/package.json
+++ b/package.json
@@ -70,11 +70,13 @@
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^4.2.0",
+    "@typescript-eslint/parser": "^4.2.0",
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
     "js-yaml": "^3.14.0",
     "prettier": "^2.0.0",
     "standard-version": "^9.0",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.9.7",
     "vsce": "^1.78.0",
     "vscode": "^1.1.25"
@@ -84,6 +86,7 @@
     "build": "tsc -p ./",
     "watch": "yarn build --watch",
     "postinstall": "node ./node_modules/vscode/bin/install",
-    "release": "yarn build && standard-version && git push --follow-tags && vsce publish"
+    "release": "yarn build && standard-version && git push --follow-tags && vsce publish",
+    "lint": "eslint --ext ts src"
   }
 }
