--- a/package.json
+++ b/package.json
@@ -68,12 +68,6 @@
       }
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pretty-quick --staged",
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
@@ -82,8 +76,8 @@
     "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.13.0",
-    "husky": "^5.0.0-beta.0",
     "js-yaml": "^3.14.0",
+    "lefthook": "^0.0.1",
     "prettier": "^2.0.0",
     "pretty-quick": "^3.1.0",
     "standard-version": "^9.0",
@@ -95,7 +89,7 @@
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > syntaxes/injection.json",
     "build": "tsc -p ./",
     "watch": "yarn build --watch",
-    "postinstall": "node ./node_modules/vscode/bin/install && yarn husky install",
+    "postinstall": "node ./node_modules/vscode/bin/install && lefthook install",
     "release": "yarn build && standard-version && git push --follow-tags && vsce publish",
     "lint": "eslint --ext ts src"
   }
