--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@commitlint/prompt-cli": "^11.0.0",
     "@types/node": "^14.11.10",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^4.4.1",
@@ -89,7 +90,7 @@
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > syntaxes/injection.json",
     "build": "tsc -p ./",
     "watch": "yarn build --watch",
-    "postinstall": "node ./node_modules/vscode/bin/install && lefthook install",
+    "postinstall": "node ./node_modules/vscode/bin/install && yarn lefthook install",
     "release": "yarn build && standard-version && git push --follow-tags && vsce publish",
     "lint": "eslint --ext ts src"
   }
