--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
     "@typescript-eslint/parser": "^4.4.1",
     "eslint": "^7.11.0",
     "eslint-config-prettier": "^6.13.0",
+    "husky": "^5.0.0-beta.0",
     "js-yaml": "^3.14.0",
-    "lefthook": "^0.0.1",
     "prettier": "^2.0.0",
     "pretty-quick": "^3.1.0",
     "standard-version": "^9.0",
@@ -90,7 +90,7 @@
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > syntaxes/injection.json",
     "build": "tsc -p ./",
     "watch": "yarn build --watch",
-    "postinstall": "node ./node_modules/vscode/bin/install && yarn lefthook install",
+    "postinstall": "node ./node_modules/vscode/bin/install && husky install",
     "release": "yarn build && standard-version && git push --follow-tags && vsce publish",
     "lint": "eslint --ext ts src"
   }
