--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@commitlint/prompt-cli": "^11.0.0",
     "@types/node": "^14.14.14",
+    "@types/vscode": "*",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.9.1",
     "eslint": "^7.15.0",
@@ -98,14 +99,13 @@
     "pretty-quick": "^3.1.0",
     "standard-version": "^9.0",
     "typescript": "^4.1.3",
-    "vsce": "^1.83.0",
-    "vscode": "^1.1.25"
+    "vsce": "^1.83.0"
   },
   "scripts": {
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > syntaxes/injection.json",
     "build": "tsc -p ./",
     "watch": "yarn build --watch",
-    "postinstall": "node ./node_modules/vscode/bin/install && husky install",
+    "postinstall": "husky install",
     "release": "standard-version && git push --follow-tags",
     "pkg-release": "vsce publish && ovsx publish --pat $OVS_PAT",
     "lint": "eslint --ext ts src"
