--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -59,6 +59,7 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+      - run: yarn install --frozen-lockfile
       - run: yarn build
       - name: Publish to Open VSX Registry
         uses: HaaLeo/publish-vscode-extension@v0
