--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,4 +6,4 @@ updates:
     directory: "/"
     # Check the npm registry for updates every week (weekdays)
     schedule:
-      interval: "weekly"
+      interval: "monthly"
