--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "build": "tsc -p ./",
     "watch": "yarn build --watch",
     "postinstall": "husky install",
-    "release": "yarn install && yarn lint && yarn build && standard-version && git push --follow-tags",
+    "release": "yarn install && yarn lint && yarn build && standard-version && git push --follow-tags && yarn run publish",
     "package": "vsce package",
     "publish": "yarn package && vsce publish && ovsx publish --pat $OVS_PAT",
     "lint": "eslint --ext ts src"
