chore: upgrade dependencies

--- a/package.json
+++ b/package.json
@@ -84,19 +84,19 @@
     }
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.1.1",
-    "@commitlint/config-conventional": "^12.0.1",
-    "@commitlint/prompt-cli": "^12.0.1",
+    "@commitlint/cli": "*",
+    "@commitlint/config-conventional": "^13.0",
+    "@commitlint/prompt-cli": "*",
     "@types/command-exists": "^1.2.0",
-    "@types/node": "^15.6.1",
+    "@types/node": "^16.0",
     "@types/vscode": "*",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.1",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
-    "husky": "^6.0.0",
+    "husky": "^7.0.0",
     "js-yaml": "^4.0.0",
-    "ovsx": "^0.1.0-next.a9154dc",
+    "ovsx": "^0.2",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "standard-version": "^9.1",
