feat: add esbuild bundling

--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/vscode": "*",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.1",
+    "esbuild": "^0.12.21",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
     "husky": "^7.0.0",
@@ -105,8 +106,9 @@
   },
   "scripts": {
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > syntaxes/injection.json",
-    "build": "tsc -p ./",
-    "watch": "yarn build --watch",
+    "build-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
+    "build": "yarn run build-base -- --sourcemap --minify",
+    "watch": "yarn run build-base -- --sourcemap --watch",
     "postinstall": "husky install",
     "release": "yarn install && yarn lint && yarn build && standard-version && git push --follow-tags && yarn run publish",
     "package": "vsce package",
