--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "@types/vscode": "*",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.1",
+    "env-cmd": "^10.1.0",
     "esbuild": "^0.12.21",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
@@ -112,7 +113,7 @@
     "postinstall": "husky install",
     "release": "yarn install && yarn lint && yarn build && standard-version && git push --follow-tags && yarn run publish",
     "package": "vsce package",
-    "publish": "yarn package && vsce publish && ovsx publish --pat $OVS_PAT",
+    "publish": "yarn package && vsce publish && env-cmd --expand-envs ovsx publish --pat $OVS_PAT",
     "lint": "eslint --ext ts src"
   },
   "dependencies": {
