--- a/package.json
+++ b/package.json
@@ -112,10 +112,12 @@
     "build": "yarn run build-base -- --sourcemap --minify",
     "watch": "yarn run build-base -- --sourcemap --watch",
     "postinstall": "husky install",
-    "clean": "yarn del dist",
+    "clean": "del dist",
     "release": "yarn install && yarn lint && yarn clean && yarn build && standard-version && git push --follow-tags && yarn run publish",
+    "prepackage": "del *.vsix",
     "package": "vsce package",
-    "publish": "yarn package && vsce publish && env-cmd --expand-envs ovsx publish --pat $OVS_PAT",
+    "publish:ovsx": "yarn env-cmd --expand-envs ovsx publish *.vsix --pat $OVS_PAT",
+    "publish": "yarn package && vsce publish && yarn publish:ovsx",
     "lint": "eslint --ext ts src"
   },
   "dependencies": {
