--- a/package.json
+++ b/package.json
@@ -70,6 +70,11 @@
     "configuration": {
       "title": "NixIDE",
       "properties": {
+        "nix.formatterPath": {
+          "type": "string",
+          "default": "nixpkgs-fmt",
+          "description": "Location of the nix formatter command."
+        },
         "nix.serverPath": {
           "type": "string",
           "default": "rnix-lsp",
