--- a/package.json
+++ b/package.json
@@ -95,12 +95,12 @@
     "@types/command-exists": "^1.2.0",
     "@types/node": "^16.0",
     "@types/vscode": "*",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.1",
+    "@typescript-eslint/eslint-plugin": "*",
+    "@typescript-eslint/parser": "*",
     "del-cli": "^4.0.1",
     "env-cmd": "^10.1.0",
-    "esbuild": "^0.12.21",
-    "eslint": "^7.21.0",
+    "esbuild": "^0.13.0",
+    "eslint": "*",
     "eslint-config-prettier": "^8.1.0",
     "husky": "^7.0.0",
     "js-yaml": "^4.0.0",
