fix: auto close double quotes in comments

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -41,8 +41,7 @@
             "open": "\"",
             "close": "\"",
             "notIn": [
-                "string",
-                "comment"
+                "string"
             ]
         },
         {
