fix: auto close at end of string

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -60,7 +60,7 @@
             ]
         }
     ],
-    "autoCloseBefore": ";:.,=}])>` \n\t",
+    "autoCloseBefore": ";:.,=}])>` \n\t\"",
     // symbols that can be used to surround a selection
     "surroundingPairs": [
         [
