--- a/language-configuration.json
+++ b/language-configuration.json
@@ -102,8 +102,8 @@
     ],
     "folding": {
         "markers": {
-            "start": "^\\s*//\\s*#?region\\b",
-            "end": "^\\s*//\\s*#?endregion\\b"
+            "start": "^\\s*#\\s*#?region\\b",
+            "end": "^\\s*#\\s*#?endregion\\b"
         }
     }
 }
