--- a/package.json
+++ b/package.json
@@ -96,9 +96,9 @@
   },
   "devDependencies": {
     "@commitlint/cli": "*",
-    "@commitlint/config-conventional": "^15.0",
+    "@commitlint/config-conventional": "^16.0.0",
     "@types/command-exists": "^1.2.0",
-    "@types/node": "^16.0",
+    "@types/node": "^17.0.6",
     "@types/vscode": "*",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
@@ -119,8 +119,8 @@
   "scripts": {
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > syntaxes/injection.json",
     "build-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
-    "build": "yarn run build-base -- --sourcemap --minify",
-    "watch": "yarn run build-base -- --sourcemap --watch",
+    "build": "yarn run build-base --sourcemap --minify",
+    "watch": "yarn run build-base --sourcemap --watch",
     "postinstall": "husky install",
     "clean": "del dist",
     "release": "yarn install && yarn lint && yarn clean && yarn build && standard-version && git push --follow-tags && yarn run publish",
