feat: add nix-shell and direnv support

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,6 @@
 {
     "recommendations": [
-        "connor4312.esbuild-problem-matchers"
+        "connor4312.esbuild-problem-matchers",
+        "mkhl.direnv"
     ]
 }
