--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
     "release": "yarn install && yarn lint && yarn clean && yarn build && standard-version && git push --follow-tags && yarn run publish",
     "prepackage": "del *.vsix",
     "package": "vsce package",
-    "publish:ovsx": "yarn env-cmd --expand-envs ovsx publish *.vsix --pat $OVS_PAT",
+    "publish:ovsx": "yarn run env-cmd --expand-envs ovsx publish *.vsix --pat '$OVS_PAT'",
     "publish": "yarn package && vsce publish && yarn publish:ovsx",
     "lint": "eslint --ext ts src"
   },
