--- a/package.json
+++ b/package.json
@@ -133,8 +133,7 @@
     "package": "vsce package",
     "publish:ovsx": "yarn run env-cmd --expand-envs ovsx publish *.vsix --pat '$OVS_PAT'",
     "publish:vsce": "vsce publish",
-    "prepublish": "yarn package",
-    "publish": "yarn publish:vsce && yarn publish:ovsx",
+    "publish": "yarn package && yarn publish:vsce && yarn publish:ovsx",
     "lint": "eslint --ext ts src"
   },
   "dependencies": {
