feat: passing settings to lsp (#294)
* feat: passing settings to lsp

allows passing settings to language servers via config.serverSettings.

* cleanup package.json

--- a/package.json
+++ b/package.json
@@ -87,6 +87,11 @@
           "type": "boolean",
           "default": false,
           "description": "Use LSP instead of nix-instantiate and nixpkgs-fmt."
+        },
+        "nix.serverSettings": {
+          "type": "object",
+          "default": {},
+          "description": "Settings passed to the language server on configuration requests."
         }
       }
     },
