feat: set file icon

--- a/package.json
+++ b/package.json
@@ -41,6 +41,10 @@
         "extensions": [
           ".nix"
         ],
+        "icon": {
+          "dark": "images/icon.png",
+          "light": "images/icon.png"
+        },
         "configuration": "./language-configuration.json"
       }
     ],
