--- a/package.json
+++ b/package.json
@@ -108,24 +108,24 @@
   },
   "devDependencies": {
     "@commitlint/cli": "*",
-    "@commitlint/config-conventional": "^17.1.0",
+    "@commitlint/config-conventional": "*",
     "@types/command-exists": "^1.2.0",
-    "@types/node": "^18.7.14",
+    "@types/node": "*",
     "@types/vscode": "*",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
     "del-cli": "^5.0.0",
     "env-cmd": "^10.1.0",
-    "esbuild": "^0.15.6",
+    "esbuild": "^0.20.0",
     "eslint": "*",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.1",
+    "eslint-config-prettier": "*",
+    "husky": "^9.0.0",
     "js-yaml": "^4.0.0",
     "ovsx": "^0.8",
-    "prettier": "^2.7.1",
-    "pretty-quick": "^3.1.3",
+    "prettier": "^3.0",
+    "pretty-quick": "*",
     "standard-version": "^9.5",
-    "typescript": "^4.8.3",
+    "typescript": "^5.0",
     "vsce": "^2.15.0"
   },
   "scripts": {
@@ -147,6 +147,6 @@
   },
   "dependencies": {
     "command-exists": "^1.2.9",
-    "vscode-languageclient": "^8.0.2"
+    "vscode-languageclient": "^9.0.0"
   }
 }
