--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "icon": "images/icon.png",
   "license": "MIT",
   "engines": {
-    "vscode": "^1.47.0"
+    "vscode": ">=1.82.0"
   },
   "categories": [
     "Programming Languages",
