--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
   },
   "dependencies": {
     "command-exists": "^1.2.9",
-    "vscode-languageclient": "^9.0.0"
+    "vscode-languageclient": "^9.0.0",
+    "vscode-variables": "^0.1.3"
   }
 }
