feat: migrate eslint config

--- a/package.json
+++ b/package.json
@@ -112,6 +112,8 @@
   "devDependencies": {
     "@commitlint/cli": "*",
     "@commitlint/config-conventional": "*",
+    "@eslint/eslintrc": "^3.1.0",
+    "@eslint/js": "^9.8.0",
     "@types/command-exists": "^1.2.0",
     "@types/node": "*",
     "@types/vscode": "*",
@@ -122,6 +124,7 @@
     "esbuild": "^0.23.0",
     "eslint": "*",
     "eslint-config-prettier": "*",
+    "globals": "^15.9.0",
     "husky": "^9.1.4",
     "js-yaml": "^4.0.0",
     "ovsx": "^0.9",
@@ -136,7 +139,7 @@
     "build-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
     "build": "yarn run build-base --sourcemap --minify",
     "watch": "yarn run build-base --sourcemap --watch",
-    "postinstall": "husky install",
+    "postinstall": "husky",
     "clean": "del dist",
     "prerelease": "yarn install && yarn lint && yarn clean && yarn build",
     "release": "standard-version",
