--- a/package.json
+++ b/package.json
@@ -95,6 +95,15 @@
           "type": "object",
           "default": {},
           "description": "Settings passed to the language server on configuration requests."
+        },
+        "nix.hiddenLanguageServerErrors": {
+          "type": "array",
+          "items": { "type": "string" },
+          "default": [],
+          "description": "Error notifications from the language server for these request types will be suppressed.",
+          "examples": [
+            [ "textDocument/definition", "textDocument/documentSymbol" ]
+          ]
         }
       }
     },
