--- a/package.json
+++ b/package.json
@@ -133,8 +133,6 @@
     "@types/vscode": "*",
     "@typescript-eslint/eslint-plugin": "*",
     "@typescript-eslint/parser": "*",
-    "del-cli": "^5.0.0",
-    "env-cmd": "^10.1.0",
     "esbuild": "^0.23.1",
     "eslint": "*",
     "eslint-config-prettier": "*",
@@ -146,23 +144,24 @@
     "pretty-quick": "*",
     "standard-version": "^9.5",
     "typescript": "^5.5",
-    "vsce": "^2.15.0"
+    "vsce": "^2.15.0",
+    "@types/bun": "latest"
   },
   "scripts": {
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > syntaxes/injection.json",
     "build-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
-    "build": "yarn run build-base --sourcemap --minify",
-    "watch": "yarn run build-base --sourcemap --watch",
+    "build": "bun run build-base --sourcemap --minify",
+    "watch": "bun run build-base --sourcemap --watch",
     "postinstall": "husky",
-    "clean": "del dist",
-    "prerelease": "yarn install && yarn lint && yarn clean && yarn build",
+    "clean": "rm -rd dist",
+    "prerelease": "bun run install && bun run lint && bun run clean && bun run build",
     "release": "standard-version",
     "postrelease": "git push --follow-tags",
-    "prepackage": "del *.vsix",
+    "prepackage": "rm *.vsix",
     "package": "vsce package",
-    "publish:ovsx": "yarn run env-cmd --expand-envs ovsx publish *.vsix --pat '$OVS_PAT'",
+    "publish:ovsx": "bun run env-cmd --expand-envs ovsx publish *.vsix --pat '$OVS_PAT'",
     "publish:vsce": "vsce publish",
-    "publish": "yarn package && yarn publish:vsce && yarn publish:ovsx",
+    "publish": "bun run package && bun run publish:vsce && bun run publish:ovsx",
     "lint": "eslint src"
   },
   "dependencies": {
