--- a/package.json
+++ b/package.json
@@ -126,22 +126,14 @@
   "devDependencies": {
     "@commitlint/cli": "*",
     "@commitlint/config-conventional": "*",
-    "@eslint/eslintrc": "^3.1.0",
-    "@eslint/js": "^9.9.1",
     "@types/command-exists": "^1.2.0",
     "@types/node": "*",
     "@types/vscode": "*",
-    "@typescript-eslint/eslint-plugin": "*",
-    "@typescript-eslint/parser": "*",
     "esbuild": "^0.23.1",
-    "eslint": "*",
-    "eslint-config-prettier": "*",
     "globals": "^15.9.0",
     "husky": "^9.1.5",
     "js-yaml": "^4.0.0",
     "ovsx": "^0.9",
-    "prettier": "^3.3",
-    "pretty-quick": "*",
     "standard-version": "^9.5",
     "typescript": "^5.5",
     "vsce": "^2.15.0",
@@ -150,19 +142,19 @@
   "scripts": {
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > syntaxes/injection.json",
     "build-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
-    "build": "bun run build-base --sourcemap --minify",
-    "watch": "bun run build-base --sourcemap --watch",
+    "build": "build-base --sourcemap --minify",
+    "watch": "build-base --sourcemap --watch",
     "postinstall": "husky",
     "clean": "rm -rd dist",
-    "prerelease": "bun run install && bun run lint && bun run clean && bun run build",
+    "prerelease": "bun install && bun run lint && bun run clean && bun run build",
     "release": "standard-version",
     "postrelease": "git push --follow-tags",
-    "prepackage": "rm *.vsix",
+    "prepackage": "rm -f *.vsix",
     "package": "vsce package",
-    "publish:ovsx": "bun run env-cmd --expand-envs ovsx publish *.vsix --pat '$OVS_PAT'",
+    "publish:ovsx": "ovsx publish *.vsix --pat '$OVS_PAT'",
     "publish:vsce": "vsce publish",
     "publish": "bun run package && bun run publish:vsce && bun run publish:ovsx",
-    "lint": "eslint src"
+    "lint": "bun x biome check --write src"
   },
   "dependencies": {
     "command-exists": "^1.2.9",
