--- a/package.json
+++ b/package.json
@@ -130,21 +130,21 @@
     "@types/command-exists": "^1.2.3",
     "@types/node": "^22.10.3",
     "@types/vscode": "^1.96.0",
+    "@vscode/vsce": "^3.2.1",
     "esbuild": "^0.24.2",
     "globals": "^15.14.0",
-    "husky": "^9.1.7",
     "js-yaml": "^4.1.0",
+    "lefthook": "^1.10.7",
     "ovsx": "^0.10.1",
     "standard-version": "^9.5.0",
-    "typescript": "^5.7.2",
-    "@vscode/vsce": "^3.2.1"
+    "typescript": "^5.7.2"
   },
   "scripts": {
     "prebuild": "js-yaml syntaxes/nix.YAML-tmLanguage > syntaxes/nix.tmLanguage.json && js-yaml syntaxes/injection.yml > syntaxes/injection.json",
     "build-base": "esbuild ./src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node",
     "build": "bun run build-base --sourcemap --minify",
     "watch": "bun run build-base --sourcemap --watch",
-    "postinstall": "husky",
+    "postinstall": "lefthook install",
     "clean": "rm -rd dist",
     "prerelease": "bun install && bun run lint && bun run clean && bun run build",
     "release": "standard-version",
